...
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/iv_profile_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/btn_profile_info"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Profile Information"
            android:textSize="20sp"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="80dp" />

        <TextView
            android:id="@+id/tv_full_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/name"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/guideline"
...
