...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_company_name"
        app:startIconDrawable="@drawable/baseline_company_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_register_company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            tools:ignore="SpeakableTextPresentCheck"/>
    </com.google.android.material.textfield.TextInputLayout>
...
            android:inputType="none"
            android:maxLines="1"
            android:padding="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register_company"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_margin="32dp"
        android:text="Register Company"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
...
